# mood-broadcast-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rocket.toml.example  docker-compose.yml
.github/workflows/: lintTest.yml  publish.yml
migrations/001_create_users_table/: up.sql
migrations/002_create_auth_table/: up.sql
migrations/003_create_games_table/: up.sql
migrations/004_create_friends_table/: down.sql  up.sql
migrations/005_create_moods_table/: down.sql  up.sql
src/: config.rs  jwt.rs  main.rs  schema.rs
src/controllers/: auth_controller.rs  game_controller.rs  mod.rs  mood_controller.rs
src/models/: auth.rs  friend.rs  game.rs  mod.rs  mood.rs  response.rs  user.rs
src/services/: auth_service.rs  game_service.rs  mod.rs  mood_service.rs
