[package]
name = "mood-broadcast-api"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Laborderie <antoine.laborderie@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_migrations = "1.4.0"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
